<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventHandler"
            type="com.msalcedo.dinnews.screen.news.events.NewListEvent" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing.xxxxlg">

                <!-- Search bar -->
                <LinearLayout
                    android:id="@+id/llBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/spacing.xs"
                        android:layout_marginLeft="@dimen/spacing.xs"
                        android:layout_marginRight="@dimen/spacing.xs"
                        android:layout_marginTop="@dimen/spacing.xsm"
                        android:background="@drawable/box_text"
                        android:drawableEnd="@drawable/ic_action_search"
                        android:gravity="left"
                        android:hint="@string/text_top_bar"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:textColor="@color/black">

                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/selector_transparency">

                    <TextView
                        android:id="@+id/tvSource"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:gravity="left"
                        android:hint="@string/hint_sources"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/selector_transparency">

                    <TextView
                        android:id="@+id/tvSortBy"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:gravity="left"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/transparent">

                    <TextView
                        android:id="@+id/tvFrom"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:drawableEnd="@drawable/ic_action_date_range"
                        android:gravity="left"
                        android:hint="@string/from"
                        android:paddingStart="@dimen/spacing.sm"
                        android:textColor="@color/black"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/transparent">

                    <TextView
                        android:id="@+id/tvTo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:drawableEnd="@drawable/ic_action_date_range"
                        android:gravity="left"
                        android:hint="@string/to"
                        android:paddingStart="@dimen/spacing.sm"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/selector_transparency">

                    <TextView
                        android:id="@+id/tvLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:gravity="left"
                        android:hint="@string/hint_language"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/selector_transparency">

                    <TextView
                        android:id="@+id/tvCategories"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:gravity="left"
                        android:hint="@string/hint_category"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing.md"
                    android:layout_marginRight="@dimen/spacing.md"
                    android:layout_marginTop="@dimen/spacing.xsm"
                    android:background="@drawable/selector_transparency">

                    <TextView
                        android:id="@+id/tvCountries"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing.xlg"
                        android:layout_gravity="center"
                        android:background="@drawable/box_text"
                        android:gravity="left"
                        android:hint="@string/hint_countries"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                style="@style/Button.Purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing.xsm"
                android:layout_marginLeft="@dimen/spacing.md"
                android:layout_marginRight="@dimen/spacing.md"
                android:onClick="@{() -> eventHandler.onClickSearch()}"
                android:text="@string/search" />

        </LinearLayout>

    </RelativeLayout>


</layout>